--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,15 +1,16 @@
 $body: #eaeaea;
 
-$mainColor3: #9e9e9e;
-$mainColor: #666666;
+$mainColor3: #bbbbbb;
+$mainColor: #414141;
 $mainColor2: #353436;
+$mainColor4: #000000;
 
 $secondaryColor: #ff4d4d;
 $secondaryColor2: #ff4f4f;
 
 $thirdColor: #6bfee6;
 $thirdColor2: #aefff8;
-$thirdColor3: #bbfff4;
+$thirdColor3: #d5fff7;
 
  
 $myWhite: #f3f3f6;
