--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -28,6 +28,11 @@
 }
 
 @font-face {
+  font-family: 'saxbo';
+  src: url('/fonts/saxbo.ttf');
+}
+
+@font-face {
   font-family: 'ratdbi';
   src: url('/fonts/RatDSemiBold.ttf');
 }
