--- a/src/sass/libs/_loader.scss
+++ b/src/sass/libs/_loader.scss
@@ -1,3 +1,12 @@
+@keyframes rotateTimon{
+  0% {
+    transform: rotateZ(25deg)
+  }
+  100% {
+    transform: rotateZ(-25deg)
+  }
+}
+
 #main-loader {
   width: 100%;
   height: 100%;
@@ -15,7 +24,7 @@
     margin-left: -1500px;
     margin-top: -1500px;
     position: absolute;
-    background-color: $mainColor;
+    background-color: $thirdColor3;
   }
   
   .loader-wrapper {
@@ -28,22 +37,16 @@
 
     .loader-icon {
       position: absolute;
-      width: 78px;
-      height: 78px;
-      margin-left: -39px;
-      margin-top: -39px;
+      width: 38px;
+      height: 38px;
+      margin-left: -19px;
+      margin-top: -19px;
       left: 50%;
       top: 50%;
+      transform-origin: 50%;
+      animation: 4s infinite alternate rotateTimon;
+      animation-timing-function: ease-in-out;
 
-      .loader-bottom {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 84px;
-        height: 84px;
-        margin-left: -29px;
-        margin-top: 4px;
-      }
     }
   }
 }
