--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -8,11 +8,11 @@ $width: 33.3%;
   // margin-left: 52px;
   height: auto;
   min-height: 700px;
-  
+
   .main-over-wrapper {
     display: inline-block;
     position: relative;
-    min-width: 220px;
+    min-width: 250px;
     width: 100%;
 
     .main-content-wrapper {
@@ -31,71 +31,78 @@ $width: 33.3%;
         
         .article-content {
           position: relative;
+          margin-bottom: -4px;
      
           .over-article-container {
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: $secondaryColor2;
+            background-color: $mainColor3;
             opacity: 0;
             transition: 0.05s all ease-out;
             
             &:hover {
-              opacity: .95 !important;
+              opacity: .98 !important;
             }
 
             .over-article-wrapper {
               position: relative;
               height: 50%;
-              min-height: 120px;
-              top: 50%;
-              transform: translateY(-50%);
-              padding: 20px 40px;
               text-align: left;
-              margin-top: -10px;
+              // margin-top: -10px;
               
               .over-article-top {
-                max-height: 70px;
                 overflow: hidden;
-                .over-article-keywords {
-                  text-align: center;
-                  .over-article-keyword {
-                    -webkit-font-smoothing: antialiased !important;
-                    font-family: 'beauty';
-                    text-transform: capitalize;
-                    color: rgba($mainColor2, 0.8);
-                    line-height: 1.3em;
-                    font-size: 2.2rem;    
-                    margin-right: 7px;   
+                width: 100%;
 
-                    
-                    .over-article-word {
-                      color: white;
-                      transition: .1s all ease-out;
+                .over-article-title {
+                  margin-top: 5px;
+                  margin-left: 5px;
+                  font-family: 'ratdbi';
+                  font-size: calc(36px + 4 * (100vw - 320px) / 1180);
+                  line-height: 1.1em;
+                  overflow: hidden;
+                  max-width: 99%;
+                  color: $mainColor;
+                  -webkit-hyphens: auto;
+                  -moz-hyphens: auto;
+                  -ms-hyphens: auto;
+                  hyphens: auto;
+                  -webkit-hyphenate-character: '\~';
 
-                      &:hover {
-                        color: $mainColor2;
-                      }
-                    }
-                  }
                 }
               }
 
               .over-article-bottom {
-                margin-top: 30px;
                 width: 100%;
                 height: 240px;
+                margin-top: 5px;
                 color: $mainColor2;
 
-                .over-article-content {
-                  margin-top: 10px;
-                  font-family: 'sax';
-                  font-weight: 300;
-                  font-size: 1.1em;
-                  line-height: 1.4em;
-                  height: 30%;
-                  overflow: hidden;
+                .over-article-keywords {
+                  text-align: left;
 
+                  .over-article-keyword {
+                    -webkit-font-smoothing: antialiased !important;
+                    font-family: 'work500';
+                    text-transform: capitalize;
+                    line-height: 1.3em;
+                    font-size: 1.05rem;    
+                    margin-left: 5px;
+                    text-decoration: underline;
+                    color: rgba($thirdColor3, 1);
+                    text-decoration-color: transparent; 
+                    
+                    &:hover {
+                      text-decoration-color: $secondaryColor2;; 
+                    }
+                    
+                    .over-article-word {
+                      color: rgba($thirdColor3, 1);
+                      transition: .1s all ease-out;
+
+                    }
+                  }
                 }
               }
             }
@@ -110,35 +117,25 @@ $width: 33.3%;
         
         .article-label {
           text-align: left;
-          font-family: 'ratdb';
-          -webkit-font-smoothing: antialiased;
-          color: $mainColor2;
-          font-size: 0.9rem;
-          margin-top: 14px;
+          font-family: 'ratLight';
+          // -webkit-font-smoothing: antialiased;
+          color: $mainColor;
+          font-size: 0.8em;
+          margin-top: 8px;
           font-weight: 300;
           padding: 0 10px;
-          padding-bottom: 18px;
-          position: relative;
+          padding-bottom: 14px;
           margin-bottom: 10px;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
-          
-          &:after {
-            content: '✸';
-            font-family: 'work500';
-            padding-left: 4px;
-            font-size: 0.6em;
-            vertical-align: top;
-            color: $secondaryColor;
-          }
-
         }
 
         &:hover {
           .article-label {
+            color: rgba($secondaryColor, 1);
             &::after {
-              color: $secondaryColor;
+              color: $thirdColor;
             }
 
           }
