--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -21,6 +21,7 @@ $width: 33.3%;
       }
   
       .grid-item{
+        box-shadow: 0 -5px 8px rgba(#000, 0.05), 0 -1px 0 rgba(#fff, 0.35);
         width: $width;
         overflow: hidden;
         transition: all 0.5s;
@@ -37,7 +38,14 @@ $width: 33.3%;
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: $mainColor3;
+            background: rgba(187,187,187,1);
+            background: -moz-linear-gradient(top, rgba(187,187,187,1) 0%, rgba(187,187,187,1) 38%, rgba(187,187,187,0.94) 59%, rgba(187,187,187,0.9) 73%, rgba(187,187,187,0.76) 100%);
+            background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(187,187,187,1)), color-stop(38%, rgba(187,187,187,1)), color-stop(59%, rgba(187,187,187,0.94)), color-stop(73%, rgba(187,187,187,0.9)), color-stop(100%, rgba(187,187,187,0.76)));
+            background: -webkit-linear-gradient(top, rgba(187,187,187,1) 0%, rgba(187,187,187,1) 38%, rgba(187,187,187,0.94) 59%, rgba(187,187,187,0.9) 73%, rgba(187,187,187,0.76) 100%);
+            background: -o-linear-gradient(top, rgba(187,187,187,1) 0%, rgba(187,187,187,1) 38%, rgba(187,187,187,0.94) 59%, rgba(187,187,187,0.9) 73%, rgba(187,187,187,0.76) 100%);
+            background: -ms-linear-gradient(top, rgba(187,187,187,1) 0%, rgba(187,187,187,1) 38%, rgba(187,187,187,0.94) 59%, rgba(187,187,187,0.9) 73%, rgba(187,187,187,0.76) 100%);
+            background: linear-gradient(to bottom, rgba(187,187,187,1) 0%, rgba(187,187,187,1) 38%, rgba(187,187,187,0.94) 59%, rgba(187,187,187,0.9) 73%, rgba(187,187,187,0.76) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bbbbbb', endColorstr='#bbbbbb', GradientType=0 );
             opacity: 0;
             transition: 0.05s all ease-out;
             
@@ -49,6 +57,7 @@ $width: 33.3%;
               position: relative;
               height: 50%;
               text-align: left;
+              
               // margin-top: -10px;
               
               .over-article-top {
@@ -58,7 +67,9 @@ $width: 33.3%;
                 .over-article-title {
                   margin-top: 5px;
                   margin-left: 5px;
-                  font-family: 'ratdbi';
+                  margin-right: 5px;
+                  font-family: 'ratThin';
+                  text-transform: uppercase;
                   font-size: calc(36px + 4 * (100vw - 320px) / 1180);
                   line-height: 1.1em;
                   overflow: hidden;
@@ -69,6 +80,22 @@ $width: 33.3%;
                   -ms-hyphens: auto;
                   hyphens: auto;
                   -webkit-hyphenate-character: '\~';
+
+
+                  .over-article-type {
+                    color: $myWhite;
+                    font-size: 0.6rem;
+                    
+                    span {
+                      vertical-align: top;
+                      -webkit-hyphens: none;
+                      -moz-hyphens: none;
+                      -ms-hyphens: none;
+                      hyphens: none;
+                      background-color: $secondaryColor;
+                      padding: 3px 5px 2px 3px;
+                    }
+                  }
 
                 }
               }
