--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -68,6 +68,11 @@
 }
 
 @font-face {
+  font-family: 'ratBookI';
+  src: url('/fonts/RatBookItal.ttf');
+}
+
+@font-face {
   font-family: 'plaBook';
   src: url('/fonts/plaBook.ttf');
 }
