--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,6 +124,10 @@ svg:focus {
   src: url("/fonts/RatBook.ttf"); }
 
 @font-face {
+  font-family: 'ratBookI';
+  src: url("/fonts/RatBookItal.ttf"); }
+
+@font-face {
   font-family: 'plaBook';
   src: url("/fonts/plaBook.ttf"); }
 
@@ -640,25 +644,64 @@ footer {
   width: 0;
   height: 0;
   z-index: 11;
-  background-color: whitesmoke;
+  background-color: #EAEAEA;
   overflow-y: auto; }
   #article-content .article-content-wrapper {
     width: 100%;
     position: relative;
     display: inline-block; }
-    #article-content .article-content-wrapper .article-content-close {
+    #article-content .article-content-wrapper .article-closer-container {
       position: fixed;
-      right: 5%;
-      top: 5%;
+      right: 45px;
+      top: 45px;
       color: #ff4d4d;
-      z-index: 11; }
-    #article-content .article-content-wrapper header figure {
+      z-index: 11;
+      width: 30px;
+      height: 30px; }
+      #article-content .article-content-wrapper .article-closer-container:after {
+        content: "back";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: 3px;
+        margin-top: 2px;
+        transform: translate(-50%, -50%);
+        font-family: 'ratDb';
+        text-transform: uppercase;
+        font-size: 0.65rem;
+        letter-spacing: 0.1rem;
+        opacity: 0;
+        transition: 0.1s; }
+      #article-content .article-content-wrapper .article-closer-container .article-close-line {
+        position: absolute;
+        width: 35px;
+        height: 2px;
+        top: 50%;
+        transform: translate(0%, -50%);
+        background-color: #ff4d4d;
+        transform-origin: 50% 0%;
+        transition: 0.1s; }
+      #article-content .article-content-wrapper .article-closer-container .line-one {
+        transform: rotate(45deg); }
+      #article-content .article-content-wrapper .article-closer-container .line-two {
+        transform: rotate(-45deg); }
+      #article-content .article-content-wrapper .article-closer-container:hover {
+        cursor: pointer; }
+        #article-content .article-content-wrapper .article-closer-container:hover .line-one {
+          top: 10%;
+          transform: rotate(0deg); }
+        #article-content .article-content-wrapper .article-closer-container:hover .line-two {
+          top: 90%;
+          transform: rotate(0deg); }
+        #article-content .article-content-wrapper .article-closer-container:hover:after {
+          opacity: 1; }
+    #article-content .article-content-wrapper figure {
       width: 100%;
       max-height: 600px;
       overflow: hidden; }
-      #article-content .article-content-wrapper header figure img {
+      #article-content .article-content-wrapper figure img {
         width: 100%; }
-      #article-content .article-content-wrapper header figure figcaption {
+      #article-content .article-content-wrapper figure figcaption {
         font-family: 'saxi';
         color: #414141;
         text-align: right;
@@ -674,35 +717,76 @@ footer {
         font-weight: 400;
         width: 100%;
         text-align: left; }
-        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-title {
-          font-size: calc(58px + 4 * (100vw - 320px) / 1180);
-          font-family: 'ratDbi';
-          text-transform: uppercase;
-          line-height: 4rem;
-          width: 50%;
-          min-width: 360px;
-          -webkit-hyphens: auto;
-          -moz-hyphens: auto;
-          -ms-hyphens: auto;
-          hyphens: auto;
-          padding: 5px; }
-        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-item {
-          float: left; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable .article-item:nth-child(even) {
-            float: right; }
-        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
-          width: 48%;
-          min-width: 360px; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
+        #article-content .article-content-wrapper .article-content-info .article-content-readable header {
+          display: inline-block;
+          margin-top: 7px;
+          margin-left: 7px;
+          margin-bottom: 30px; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
+            display: inline-block;
+            font-size: calc(34px + 4 * (100vw - 320px) / 1180);
+            font-family: 'ratLight';
+            text-transform: uppercase;
+            line-height: 2.7rem;
+            max-width: 75%;
+            min-width: 360px;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
             hyphens: auto;
-            font-family: 'ratMedium';
-            padding: 35px;
-            line-height: 1.6em;
-            font-size: calc(12px + 4 * (100vw - 320px) / 1180);
+            padding: 5px; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title span {
+              vertical-align: middle;
+              font-family: 'ratLight';
+              border-radius: 5%;
+              color: white;
+              text-transform: uppercase;
+              background-color: #ff4d4d;
+              padding: 6px 5px 4px 6px;
+              letter-spacing: 0.05rem;
+              font-size: 0.6rem; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords {
+            display: inline-block;
+            width: 100%;
+            margin-left: 10px;
+            margin-top: 8px; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords .article-one-keyword {
+              font-family: 'ratBookI';
+              text-transform: uppercase;
+              font-size: 0.9rem;
+              color: #353436;
+              margin-right: 5px; }
+              #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords .article-one-keyword:hover {
+                color: #414141;
+                cursor: pointer;
+                text-decoration: line-through; }
+        #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
+          width: 100%;
+          min-width: 360px;
+          max-width: 65%;
+          margin: 16px; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
+            margin-bottom: 1rem;
+            -webkit-hyphens: auto;
+            -moz-hyphens: auto;
+            -ms-hyphens: auto;
+            hyphens: auto;
+            font-family: 'ratBook';
+            line-height: 1.5rem;
+            font-size: calc(10px + 4 * (100vw - 320px) / 1180);
             float: right; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:before {
+              content: "      "; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:after {
+              margin-top: 18px;
+              margin-bottom: 20px;
+              font-size: 0.9rem;
+              content: "____";
+              text-align: center;
+              font-family: 'plaHeavy';
+              display: inline-block;
+              width: 100%;
+              color: #ff4d4d; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
           width: 49%;
           position: relative;
@@ -741,25 +825,18 @@ footer {
 @media all and (max-width: 960px) {
   #article-content .article-content-wrapper .article-content-info {
     padding: 0; }
-    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-title {
-      width: 100%;
-      min-width: 360px;
-      -webkit-hyphens: auto;
-      -moz-hyphens: auto;
-      -ms-hyphens: auto;
-      hyphens: auto; }
+    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
+      max-width: 100%; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
-      width: 100%;
-      min-width: 360px; }
+      min-width: 360px;
+      max-width: 95%; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
         -webkit-hyphens: auto;
         -moz-hyphens: auto;
         -ms-hyphens: auto;
         hyphens: auto;
-        font-family: 'ratMedium';
         padding: 0;
-        line-height: 1.6em;
-        font-size: calc(12px + 4 * (100vw - 320px) / 1180); }
+        font-size: calc(11px + 4 * (100vw - 320px) / 1180); }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
       width: 100%;
       padding: 0px !important;
