--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,6 +92,10 @@ svg:focus {
   src: url("/fonts/sax.otf"); }
 
 @font-face {
+  font-family: 'saxi';
+  src: url("/fonts/saxi.otf"); }
+
+@font-face {
   font-family: 'saxbo';
   src: url("/fonts/saxbo.ttf"); }
 
@@ -125,7 +129,11 @@ svg:focus {
 
 @font-face {
   font-family: 'ratBookI';
-  src: url("/fonts/RatBookItal.ttf"); }
+  src: url("/fonts/RatBookItalic.ttf"); }
+
+@font-face {
+  font-family: 'ratDemiB';
+  src: url("/fonts/RatDemiB.ttf"); }
 
 @font-face {
   font-family: 'plaBook';
@@ -238,7 +246,7 @@ svg:focus {
     width: 404px;
     height: 100%; }
     #main-bar .bar-wrapper #bar-trigger {
-      color: #353436;
+      color: #292929;
       font-family: 'work500';
       width: 30px;
       height: 60px;
@@ -364,10 +372,9 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item-widthx2 {
       width: 66.6%; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item {
-      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.05), 0 -1px 0 rgba(255, 255, 255, 0.35);
+      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(41, 41, 41, 0.03), 0 -1px 0 rgba(41, 41, 41, 0.03);
       width: 33.3%;
-      overflow: hidden;
-      transition: all 0.5s; }
+      overflow: hidden; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
         cursor: pointer; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content {
@@ -397,21 +404,18 @@ svg:focus {
               overflow: hidden;
               width: 100%; }
               #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title {
-                margin-top: 5px;
-                margin-left: 5px;
-                margin-right: 5px;
-                font-family: 'ratThin';
+                margin: 35px 35px 0 35px;
+                font-family: 'ratBook';
                 text-transform: uppercase;
-                font-size: calc(36px + 4 * (100vw - 320px) / 1180);
-                line-height: 1.1em;
-                overflow: hidden;
+                font-size: calc(26px + 4 * (100vw - 320px) / 1180);
+                line-height: 2rem;
                 max-width: 99%;
-                color: #414141;
+                color: #292929;
                 -webkit-hyphens: auto;
                 -moz-hyphens: auto;
                 -ms-hyphens: auto;
                 hyphens: auto;
-                -webkit-hyphenate-character: '\~'; }
+                -webkit-hyphenate-character: '⌁'; }
                 #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title .over-article-type {
                   color: #f3f3f6;
                   font-size: 0.6rem; }
@@ -427,24 +431,27 @@ svg:focus {
               width: 100%;
               height: 240px;
               margin-top: 5px;
-              color: #353436; }
+              color: #353436;
+              margin: 0px 35px 0px 35px; }
               #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords {
-                text-align: left; }
+                text-align: left;
+                margin-left: 2px; }
                 #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword {
                   -webkit-font-smoothing: antialiased !important;
-                  font-family: 'work500';
+                  font-family: 'ratBook';
                   text-transform: capitalize;
                   line-height: 1.3em;
-                  font-size: 1.05rem;
-                  margin-left: 5px;
+                  font-size: .8rem;
+                  margin-right: 6px;
                   text-decoration: underline;
-                  color: #d5fff7;
+                  color: #292929;
                   text-decoration-color: transparent; }
-                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword:hover {
-                    text-decoration-color: #ff4f4f; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword .over-article-word {
-                    color: #d5fff7;
-                    transition: .1s all ease-out; }
+                    color: #292929;
+                    transition: .1s all ease-out;
+                    text-transform: uppercase; }
+                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword:hover {
+                    font-family: 'ratDemiB'; }
         #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content img {
           min-height: 200px;
           transition: all 0.3s ease-out;
@@ -705,12 +712,13 @@ footer {
         font-family: 'saxi';
         color: #414141;
         text-align: right;
-        margin-right: 15px;
+        margin-right: 5px;
         margin-top: 5px;
-        font-size: 0.9em; }
+        font-size: 1rem;
+        line-height: 1.3rem; }
     #article-content .article-content-wrapper .article-content-info {
       margin: 0 auto;
-      color: #000000;
+      color: #292929;
       width: 100%;
       min-width: 340px; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable {
@@ -719,20 +727,20 @@ footer {
         text-align: left; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable header {
           display: inline-block;
-          margin-top: 7px;
-          margin-left: 7px;
-          margin-bottom: 30px; }
+          margin-top: 12px;
+          margin-bottom: 20px; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
             display: inline-block;
-            font-size: calc(34px + 4 * (100vw - 320px) / 1180);
+            font-size: calc(44px + 4 * (100vw - 320px) / 1180);
             font-family: 'ratLight';
             text-transform: uppercase;
-            line-height: 2.7rem;
-            max-width: 75%;
+            line-height: calc(50px + 4 * (100vw - 320px) / 1180);
+            max-width: 100%;
             min-width: 360px;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
+            -webkit-hyphenate-character: '⌁';
             hyphens: auto;
             padding: 5px; }
             #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title span {
@@ -745,76 +753,89 @@ footer {
               padding: 6px 5px 4px 6px;
               letter-spacing: 0.05rem;
               font-size: 0.6rem; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords {
-            display: inline-block;
-            width: 100%;
-            margin-left: 10px;
-            margin-top: 8px; }
-            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords .article-one-keyword {
-              font-family: 'ratBookI';
-              text-transform: uppercase;
-              font-size: 0.9rem;
-              color: #353436;
-              margin-right: 5px; }
-              #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-keywords .article-one-keyword:hover {
-                color: #414141;
-                cursor: pointer;
-                text-decoration: line-through; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container {
+            width: 100%; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle {
+              font-family: 'ratDemiB';
+              width: 60%;
+              float: right;
+              margin: 40px 10% 30px 40px;
+              font-size: calc(13px + 4 * (100vw - 320px) / 1180);
+              line-height: 1.55rem; }
+              #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container {
+                margin-top: 8px; }
+                #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
+                  background-color: #292929;
+                  display: inline-block;
+                  height: 15px;
+                  border-radius: 1px; }
+                  #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword {
+                    font-family: 'ratBook';
+                    text-transform: uppercase;
+                    font-size: 0.6rem;
+                    vertical-align: top;
+                    padding: 0px 3px 2px 3px;
+                    margin-top: -3px;
+                    margin-right: 10px;
+                    display: inline-block;
+                    color: #bbbbbb; }
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:before {
+                      content: '#';
+                      display: inline-block; }
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:nth-last-of-type(1) {
+                      margin-right: 0px; }
+                    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords .article-one-keyword:hover {
+                      font-family: 'ratDemiB';
+                      cursor: pointer; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
           width: 100%;
           min-width: 360px;
-          max-width: 65%;
-          margin: 16px; }
+          max-width: 100%; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
-            margin-bottom: 1rem;
+            margin: 0 auto;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
             hyphens: auto;
+            width: 80%;
+            -webkit-hyphenate-character: '⌁';
             font-family: 'ratBook';
-            line-height: 1.5rem;
-            font-size: calc(10px + 4 * (100vw - 320px) / 1180);
-            float: right; }
+            line-height: calc(22px + 4 * (100vw - 320px) / 1180);
+            font-size: calc(12px + 4 * (100vw - 320px) / 1180);
+            margin-bottom: 30px; }
             #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:before {
-              content: "      "; }
-            #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:after {
-              margin-top: 18px;
-              margin-bottom: 20px;
-              font-size: 0.9rem;
-              content: "____";
-              text-align: center;
-              font-family: 'plaHeavy';
-              display: inline-block;
-              width: 100%;
-              color: #ff4d4d; }
+              content: "    ";
+              padding-right: 0px;
+              padding-left: 10px; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
-          width: 49%;
+          width: 70%;
           position: relative;
-          min-width: 360px; }
+          min-width: 360px;
+          margin-bottom: 50px; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture img {
             width: 100%; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture-xl {
-          width: 100%;
-          min-width: 360px; }
+          min-width: 360px;
+          position: relative; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture-xl img {
             width: 100%; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
-          width: 48%; }
+          width: 58%; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
             float: right;
             width: 60%;
-            font-family: 'sax';
+            font-family: 'saxi';
             font-size: 1.2em;
             line-height: 1.2em;
-            margin-right: 20px; }
+            margin: 25px 20px 35px 0; }
     #article-content .article-content-wrapper .article-content-footer {
       width: 100%;
-      height: 170px;
+      height: 250px;
       clear: both;
       display: inline-block;
       text-align: center;
-      padding-top: 120px;
-      font-family: 'saxbo';
+      padding-top: 100px;
+      font-family: 'saxi';
       color: #353436;
       font-size: 3rem; }
 
@@ -824,19 +845,34 @@ footer {
 
 @media all and (max-width: 960px) {
   #article-content .article-content-wrapper .article-content-info {
-    padding: 0; }
+    padding: 0;
+    width: 100%; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
-      max-width: 100%; }
+      max-width: 100%;
+      font-size: calc(38px + 4 * (100vw - 320px) / 1180);
+      line-height: calc(42px + 4 * (100vw - 320px) / 1180); }
+    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container {
+      width: 100%; }
+      #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle {
+        font-family: 'ratDemiB';
+        width: 90%;
+        float: none;
+        padding: 0;
+        margin: 40px 5% 30px 5%;
+        font-size: calc(15px + 4 * (100vw - 320px) / 1180);
+        line-height: 1.55rem; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
-      min-width: 360px;
-      max-width: 95%; }
+      min-width: 360px; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
         -webkit-hyphens: auto;
         -moz-hyphens: auto;
         -ms-hyphens: auto;
         hyphens: auto;
+        width: 90%;
+        -webkit-hyphenate-character: '⌁';
         padding: 0;
-        font-size: calc(11px + 4 * (100vw - 320px) / 1180); }
+        font-size: calc(13px + 4 * (100vw - 320px) / 1180);
+        line-height: calc(22px + 4 * (100vw - 320px) / 1180); }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
       width: 100%;
       padding: 0px !important;
@@ -844,14 +880,14 @@ footer {
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture img {
         width: 100%; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
-      width: 48%; }
+      width: 100%; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
+        margin: 25px 20px 35px 0;
         float: right;
-        width: 60%;
-        font-family: 'sax';
+        width: 70%;
+        font-family: 'saxi';
         font-size: 1.2em;
-        line-height: 1.2em;
-        margin-right: 20px; } }
+        line-height: 1.2em; } }
 
 #app {
   background: #e6e6e6e6;
