--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,7 +246,7 @@ svg:focus {
     width: 404px;
     height: 100%; }
     #main-bar .bar-wrapper #bar-trigger {
-      color: #292929;
+      color: #1c1c20;
       font-family: 'work500';
       width: 30px;
       height: 60px;
@@ -372,7 +372,7 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item-widthx2 {
       width: 66.6%; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item {
-      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(41, 41, 41, 0.03), 0 -1px 0 rgba(41, 41, 41, 0.03);
+      box-shadow: 0 -5px 8px rgba(0, 0, 0, 0.03), 0 -2px 4px rgba(28, 28, 32, 0.03), 0 -1px 0 rgba(28, 28, 32, 0.03);
       width: 33.3%;
       overflow: hidden; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
@@ -410,7 +410,7 @@ svg:focus {
                 font-size: calc(26px + 4 * (100vw - 320px) / 1180);
                 line-height: 2rem;
                 max-width: 99%;
-                color: #292929;
+                color: #1c1c20;
                 -webkit-hyphens: auto;
                 -moz-hyphens: auto;
                 -ms-hyphens: auto;
@@ -444,10 +444,10 @@ svg:focus {
                   font-size: .8rem;
                   margin-right: 6px;
                   text-decoration: underline;
-                  color: #292929;
+                  color: #1c1c20;
                   text-decoration-color: transparent; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword .over-article-word {
-                    color: #292929;
+                    color: #1c1c20;
                     transition: .1s all ease-out;
                     text-transform: uppercase; }
                   #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-bottom .over-article-keywords .over-article-keyword:hover {
@@ -646,14 +646,24 @@ footer {
   width: 100% !important;
   height: 100% !important; }
 
+.article-back-black {
+  background-color: #1c1c20 !important;
+  color: #bbbbbb !important; }
+
+.article-color-black {
+  color: #f3f3f6 !important; }
+
+.article-white-black {
+  background-color: #bbbbbb !important; }
+
 #article-content {
   position: fixed;
   width: 0;
   height: 0;
   z-index: 11;
-  background-color: #EAEAEA;
   overflow-y: auto; }
   #article-content .article-content-wrapper {
+    background-color: #EAEAEA;
     width: 100%;
     position: relative;
     display: inline-block; }
@@ -718,7 +728,7 @@ footer {
         line-height: 1.3rem; }
     #article-content .article-content-wrapper .article-content-info {
       margin: 0 auto;
-      color: #292929;
+      color: #1c1c20;
       width: 100%;
       min-width: 340px; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable {
@@ -727,32 +737,36 @@ footer {
         text-align: left; }
         #article-content .article-content-wrapper .article-content-info .article-content-readable header {
           display: inline-block;
-          margin-top: 12px;
-          margin-bottom: 20px; }
-          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
+          margin-top: 12px; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-title {
             display: inline-block;
-            font-size: calc(44px + 4 * (100vw - 320px) / 1180);
-            font-family: 'ratLight';
+            font-size: calc(60px + 4 * (100vw - 320px) / 1180);
+            font-family: 'ratThin';
             text-transform: uppercase;
-            line-height: calc(50px + 4 * (100vw - 320px) / 1180);
-            max-width: 100%;
+            line-height: calc(66px + 4 * (100vw - 320px) / 1180);
             min-width: 360px;
+            width: 70%;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
             -webkit-hyphenate-character: '⌁';
             hyphens: auto;
-            padding: 5px; }
-            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title span {
+            margin: 0px 5%;
+            -webkit-font-smoothing: antialiased !important; }
+          #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-type-container {
+            margin-left: 5%; }
+            #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-type-container .article-content-type {
+              margin-left: 4px;
+              display: inline-block;
               vertical-align: middle;
-              font-family: 'ratLight';
+              font-family: 'ratDemiB';
               border-radius: 5%;
               color: white;
               text-transform: uppercase;
               background-color: #ff4d4d;
               padding: 6px 5px 4px 6px;
-              letter-spacing: 0.05rem;
-              font-size: 0.6rem; }
+              letter-spacing: 0.1rem;
+              font-size: 0.7rem; }
           #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container {
             width: 100%; }
             #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle {
@@ -761,11 +775,13 @@ footer {
               float: right;
               margin: 40px 10% 30px 40px;
               font-size: calc(13px + 4 * (100vw - 320px) / 1180);
-              line-height: 1.55rem; }
+              line-height: 1.55rem;
+              -webkit-font-smoothing: antialiased !important; }
               #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container {
+                margin-bottom: 20px;
                 margin-top: 8px; }
                 #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle .article-keywords-container .article-keywords {
-                  background-color: #292929;
+                  background-color: #1c1c20;
                   display: inline-block;
                   height: 15px;
                   border-radius: 1px; }
@@ -847,10 +863,11 @@ footer {
   #article-content .article-content-wrapper .article-content-info {
     padding: 0;
     width: 100%; }
-    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-content-title {
-      max-width: 100%;
+    #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-header-top .article-content-title {
+      margin: 0 5%;
       font-size: calc(38px + 4 * (100vw - 320px) / 1180);
-      line-height: calc(42px + 4 * (100vw - 320px) / 1180); }
+      line-height: calc(42px + 4 * (100vw - 320px) / 1180);
+      font-family: 'ratLight'; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container {
       width: 100%; }
       #article-content .article-content-wrapper .article-content-info .article-content-readable header .article-subtitle-container .article-subtitle {
@@ -858,7 +875,7 @@ footer {
         width: 90%;
         float: none;
         padding: 0;
-        margin: 40px 5% 30px 5%;
+        margin: 40px 5% 50px 5%;
         font-size: calc(15px + 4 * (100vw - 320px) / 1180);
         line-height: 1.55rem; }
     #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph {
@@ -888,6 +905,42 @@ footer {
         font-family: 'saxi';
         font-size: 1.2em;
         line-height: 1.2em; } }
+
+@media all and (min-width: 1480px) {
+  #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p {
+    margin-top: 50px;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    width: 90%;
+    column-count: 2;
+    column-gap: 80px;
+    column-rule: 1px dotted rgba(28, 28, 32, 0.8);
+    -webkit-hyphenate-character: '⌁';
+    padding: 0;
+    font-size: calc(11px + 4 * (100vw - 320px) / 1180);
+    line-height: calc(20px + 4 * (100vw - 320px) / 1180); }
+    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-paragraph p:after {
+      content: "↙︎";
+      width: 20px;
+      height: 2px;
+      color: #1c1c20; }
+  #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture {
+    width: 100%;
+    padding: 0px !important;
+    float: left; }
+    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-picture img {
+      width: 100%; }
+  #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote {
+    width: 100%; }
+    #article-content .article-content-wrapper .article-content-info .article-content-readable .article-content-quote p {
+      margin: 25px 20px 35px 0;
+      float: right;
+      width: 70%;
+      font-family: 'saxi';
+      font-size: 1.2em;
+      line-height: 1.2em; } }
 
 #app {
   background: #e6e6e6e6;
